# nimbus

./: LICENSE  README.md  setup_nimbus.sh
nimbus/: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Makefile  PUBLISHING.md  README.md  SECURITY.md  VISION.md
nimbus/.github/: PULL_REQUEST_TEMPLATE.md
nimbus/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.md
nimbus/.github/workflows/: ci.yml
nimbus/apps/api/: .env.example  Dockerfile  MANIFEST.in  README.md  README_PYPI.md  alembic.ini  body.json  env.example  eq is NOT NULL, make it nullable (safe & simple)  mypy.ini  production_test.py  pyproject.toml  pytest.ini  ruff.toml  setup.py  tests.db  wait_for_db_and_migrate.sh
nimbus/apps/api/alembic/: env.py  script.py.mako
nimbus/apps/api/alembic/versions/: 0001_init.py  45a54af5e3fd_baseline_migration.py  51835923422d_events_seq_unique_index.py
nimbus/apps/api/src/nimbus/: cache.py  config.py  db.py  logging.py  main.py  settings.py
nimbus/apps/api/src/nimbus/auth/: hmac.py
nimbus/apps/api/src/nimbus/models/: __init__.py  base.py  event.py  project.py  user.py
nimbus/apps/api/src/nimbus/repositories/: events.py  metrics.py  projects.py
nimbus/apps/api/src/nimbus/routes/: auth.py  events.py  health.py  health_minimal.py  metrics.py  projects.py  ws.py
nimbus/apps/api/src/nimbus/schemas/: auth.py  events.py  events_list.py  metrics.py  projects.py
nimbus/apps/api/src/nimbus/security/: auth.py  deps.py  hmac.py  jwt.py  oidc.py
nimbus/apps/api/src/nimbus/services/: events.py  metrics.py  projects.py
nimbus/apps/api/tests/: conftest.py  test_api_basic.py  test_auth.py  test_events_api.py  test_health.py  test_metrics_api.py  testutils.py
nimbus/apps/worker/: Dockerfile  pyproject.toml  ruff.toml
nimbus/apps/worker/src/nimbus_worker/: config.py  worker.py
nimbus/apps/worker/tests/: test_config.py
nimbus/deploy/docker/: .env.example  compose.dev.yml
nimbus/frontend/: .eslintrc.json  Dockerfile  README.md  index.html  jest.config.js  package.json
nimbus/frontend/src/: App.test.tsx  App.tsx  DemoPage.tsx  EventsPage.tsx  LoginPage.tsx  Playground.tsx  UserGenPage.tsx
