[tool.poetry]
name = "nimbus-api"
version = "0.1.0"
description = "Nimbus FastAPI backend"
authors = ["Bahagh <baha.ghrissi@esprit.tn>"]
package-mode = true
packages = [{ include = "nimbus", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
pyjwt = "^2.8.0"
bcrypt = "^4.1.3"
redis = "^5.0.7"
structlog = "^24.1.0"
slowapi = "^0.1.9"
alembic = "^1.13.2"
python-multipart = "^0.0.9"
cryptography = "^43.0.0"
# OIDC/JWKS support
python-jose = "^3.3.0"
requests = "^2.32.3"
# Observability
opentelemetry-api = "^1.26.0"
opentelemetry-sdk = "^1.26.0"
opentelemetry-instrumentation-fastapi = "^0.47b0"
opentelemetry-instrumentation-sqlalchemy = "^0.47b0"
psycopg2-binary = "^2.9.9"
email-validator = "^2.1.0"
httpx = "^0.27.0"
psycopg = {extras = ["binary"], version = "^3.2.10"}
fastapi-limiter = "^0.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
ruff = "^0.13.2"
pytest-cov = "^7.0.0"
faker = "^37.8.0"
types-requests = "^2.32.4.20250913"
types-python-jose = "^3.5.0.20250531"
aiosqlite = "^0.21.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
